<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aboutMenu"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/about" />

    <item
        android:id="@+id/moreAppsMenu"
        android:icon="@drawable/ic_baseline_widgets_24"
        android:title="@string/more_apps" />

    <item
        android:id="@+id/rateMenu"
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/rate"/>

    <item
        android:id="@+id/updateMenu"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/check_update" />

    <item
        android:id="@+id/shareMenu"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share" />


    <item
        android:id="@+id/exitMenu"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/exit" />

</menu>